# hydrastack

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  TODO.txt  conanfile.py  guide.txt  hydra  pyproject.toml
app/: config.dev.json  config.json
app/src/: main.cc
app/src/controllers/: Home.cc
cmake/: HydraConfig.cmake.in
demo/: config.dev.json  config.json
demo/src/: main.cc
demo/src/controllers/: Home.cc
docs/: getting-started.md
engine/include/hydra/: Config.h  HtmlShell.h  HydraSsrPlugin.h  LogFmt.h  V8IsolatePool.h  V8SsrRuntime.h
engine/src/: Config.cc  HtmlShell.cc  HydraShellPlugin.cc  HydraSsrPlugin.cc  V8IsolatePool.cc  V8Platform.cc  V8SsrRuntime.cc
engine/test/: ConfigValidationTest.cc
hydrastack/: __init__.py  cli.py
hydrastack/scaffold/: .gitignore  CMakeLists.txt  README.md  conanfile.py  hydra
hydrastack/scaffold/app/: config.dev.json  config.json
hydrastack/scaffold/app/src/: main.cc
hydrastack/scaffold/app/src/controllers/: Home.cc
hydrastack/scaffold/cmake/: HydraUI.cmake
hydrastack/scaffold/demo/src/: main.cc
hydrastack/scaffold/engine/include/hydra/: HtmlShell.h  HydraRoute.h  HydraSsrPlugin.h  V8Platform.h
hydrastack/scaffold/engine/src/: HtmlShell.cc  HydraSsrPlugin.cc  V8SsrRuntime.cc
hydrastack/scaffold/scripts/: dev.sh  run_drogon_dev_once.sh
hydrastack/scaffold/ui/: package.json  tailwind.config.js  vite.config.ts
hydrastack/scaffold/ui/locales/fr/LC_MESSAGES/: messages.po
hydrastack/scaffold/ui/locales/ko/LC_MESSAGES/: messages.po
hydrastack/scaffold/ui/src/: entry-ssr.tsx  routeContract.ts
public/assets/: app-Co6SuXe4.css  app-Cx4swT7n.css  app-D4JuCTmK.css  app-DA6xfOZP.css  app-KAnsVUrx.css  app-KDsrd0um.css  app-TABShRHJ.css  app.css  classmap.json  client-B7PKkEQ2.js  client-BTV9hXOR.js  client-B_3CXoM-.js  client-B_FqvMct.js  client-ByY5wfrm.js  client-C9vR1TWl.js  client-CVA6MyuX.js  client-D0Rganrf.js  client-D5CEDzqv.js  client-Dvv9ihsl.js  client-DyPYNaeF.js  client-l2em8wFc.js  client-pUBd2WOm.js  client-rAdwOoPs.js  client-rLOZphqL.js  client-vjRU_uMH.js  client-xctxg38p.js  client.js  manifest.json  ssr-bundle.js
scripts/: dev.sh  run_drogon_dev_once.sh  test_load_regression.py  test_ssr_integration.py
ui/: package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/locales/en/LC_MESSAGES/: messages.po
ui/locales/fr/LC_MESSAGES/: messages.po
ui/locales/ko/LC_MESSAGES/: messages.po
ui/src/: App.tsx  entry-client.tsx  entry-ssr.tsx  styles.css
ui/src/i18n/: gettext.ts
